CHG: updated scripts configuration