@@ -25,9 +25,6 @@ apply plugin: 'com.github.kt3k.coveralls'
 /* DEFINE REPOSITORY WITH LATEST ROBOLECTRIC VERSION */
 repositories {
     mavenCentral()
-    maven {
-        url 'https://oss.sonatype.org/content/repositories/snapshots/'
-    }
 }
 
 dependencies {
@@ -53,11 +50,9 @@ dependencies {
             /* Espresso (v1.1) */
             // ALTERNATIVE:
             //   androidTestCompile files('../_libs/espresso/espresso-1.1-bundled.jar')
-            androidTestCompile files(
-                    '../_libs/espresso/espresso-1.1.jar',
-                    '../_libs/espresso/testrunner-1.1.jar',
-                    '../_libs/espresso/testrunner-runtime-1.1.jar')
-
+            androidTestCompile files("${rootProject.rootDir}/samples/_libs/espresso/espresso-1.1.jar")
+            androidTestCompile files("${rootProject.rootDir}/samples/_libs/espresso/testrunner-1.1.jar")
+            androidTestCompile files("${rootProject.rootDir}/samples/_libs/espresso/testrunner-runtime-1.1.jar")
         }
 
         /* Hamcrest (v1.4) */
@@ -103,7 +98,7 @@ dependencies {
             // ALTERNATIVE:
             //    androidTestCompile files(
             //            '../_libs/robolectric-2.3-with-dependencies.jar')
-            androidTestCompile('org.robolectric:robolectric:2.3') {
+            androidTestCompile('org.robolectric:robolectric:+') {
                 exclude module: 'classworlds'
                 exclude module: 'commons-logging'
                 exclude module: 'httpclient'
@@ -158,6 +153,16 @@ android {
         androidTest {
             // UNCOMMENT for enabling 'custom manifest for unit tests' feature (part #1 of 2):
             // manifest.srcFile 'src/test/AndroidManifest.xml'
+
+            /* exclude Espresso tests if tools is not attached */
+            if (!useEspresso) {
+                java.exclude '**/espresso/**'
+            }
+
+            /* exclude robolectric tests */
+            if (!useRobolectric) {
+                java.exclude '**/robolectric/**'
+            }
         }
     }
 
@@ -166,8 +171,9 @@ android {
         // custom debug key, allows to test social networks
         debug {
             storeFile file("${rootProject.rootDir}/gradle/release/artfulbits.debug.keystore")
-            storePassword 'android'
+
             keyAlias 'androiddebugkey'
+            storePassword 'android'
             keyPassword 'android'
         }
         // production key
@@ -186,7 +192,7 @@ android {
         release {
             signingConfig signingConfigs.release
 
-            runProguard = true
+            runProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         // debug configuration with custom debug key
@@ -201,7 +207,7 @@ android {
         // release without obfuscation
         noProguardRelease.initWith(buildTypes.release)
         noProguardRelease {
-            runProguard = false
+            runProguard false
         }
         // release with enabled debug options
         debuggableRelease.initWith(buildTypes.noProguardRelease)
@@ -307,15 +313,18 @@ if (useRobolectric) {
         exclude '**/espresso/**/*.class'
 
         // configure max heap size of the test JVM
-//        maxHeapSize = "4g"
+        maxHeapSize = "4g"
+
+        // configure some Java Virtual machine params for boosting tests running
+        jvmArgs '-XX:MaxPermSize=512m'
 
         // configure whether failing tests should fail the build
-//        ignoreFailures true
+        ignoreFailures true
 
         // use afterTest to listen to the test execution results
-//    afterTest { descriptor, result ->
-//        println "Executing test for {$descriptor.name} with result: ${result.resultType}"
-//    }
+        afterTest { descriptor, result ->
+            println "Executing test for {$descriptor.name} with result: ${result.resultType}"
+        }
     }
 
     apply plugin: 'idea'
